--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-hook-form": "^7.24.0",
     "react-hooks": "^1.0.1",
     "react-native": "0.64.3",
+    "react-native-loading-spinner-overlay": "^3.0.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
     "react-native-svg": "^12.1.1",
