--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "expo-device": "~4.1.0",
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.5",
+    "firebase": "^9.6.8",
     "husky": "^7.0.4",
     "jest": "^26.6.3",
     "jest-expo": "^44.0.1",
