--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "expo-device": "~4.1.0",
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.5",
-    "firebase": "^9.6.8",
+    "firebase": "8",
     "husky": "^7.0.4",
     "jest": "^26.6.3",
     "jest-expo": "^44.0.1",
@@ -70,6 +70,7 @@
     "react-native-web": "0.17.1",
     "react-test-renderer": "^17.0.2",
     "sentry-expo": "^4.0.3",
+    "unstated-next": "^1.1.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
