--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     ]
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.16.3",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
@@ -49,6 +50,7 @@
     "expo-barcode-scanner": "~11.2.0",
     "expo-constants": "~13.0.1",
     "expo-device": "~4.1.0",
+    "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.5",
     "firebase": "8",
