--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/enzyme": "^3.10.11",
     "@types/jest": "^27.4.0",
     "@types/react-test-renderer": "^17.0.1",
+    "@types/underscore": "^1.11.4",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.10.0",
     "babel-plugin-dotenv-import": "^2.2.0",
@@ -46,6 +47,7 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "expo": "~44.0.0",
+    "expo-ads-admob": "^12.0.1",
     "expo-application": "~4.0.1",
     "expo-barcode-scanner": "~11.2.0",
     "expo-constants": "~13.0.1",
@@ -73,6 +75,7 @@
     "react-native-web": "0.17.1",
     "react-test-renderer": "^17.0.2",
     "sentry-expo": "^4.0.3",
+    "underscore": "^1.13.2",
     "unstated-next": "^1.1.0",
     "yup": "^0.32.11"
   },
