--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "prettier": "^2.5.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-firebase-hooks": "^5.0.3",
+    "react-firebase-hooks": "3",
     "react-hook-form": "^7.24.0",
     "react-hooks": "^1.0.1",
     "react-native": "0.64.3",
